[package]
name = "byteorder2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-io = { version = "0.3.29" }
pin-project = { version = "1.1.3" }
tokio = { version = "1.33.0", default-features = false, features = ["io-std"] }

[dev-dependencies]
async-fs = "2.1.0"
byteorder = "1.5.0"
futures = "0.3.29"
tempfile = "3.8.1"
tokio = { version = "1.33.0", features = ["rt", "fs", "io-util"] }
