[package]
name = "bitendian"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
full = ["std", "futures", "tokio"]

std = []
futures = ["dep:futures-io", "dep:pin-project", "std"]
tokio = ["dep:tokio", "dep:pin-project", "std"]


[dependencies]
futures-io = { version = "0.3.29", optional = true }
pin-project = { version = "1.1.3", optional = true }
tokio = { version = "1.33.0", optional = true, default-features = false, features = [
    "io-std",
] }

[dev-dependencies]
async-fs = "2.1.0"
byteorder = "1.5.0"
futures = "0.3.29"
tempfile = "3.8.1"
tokio = { version = "1.33.0", features = ["rt", "fs", "io-util"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "do_doc_cfg"]
